Implemented all the user stories.

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
         <script src="../src/containers/App.tsx"></script>
 
         <!-- freeCodeCamp test bundle. -->
-        <!-- <script defer src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+        <script defer src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
 </html>
